feat: add complete CSS exercise files - Alignments, Colors and Manipulations

--- a/exercicio_classe_css.html
+++ b/exercicio_classe_css.html
@@ -12,14 +12,22 @@
   <body>
     <div class="container">
       <div class="cabecalho">
-        <p>Título Principal</p>
-        <p>Este é o subtítulo que precisa de estilo específico.</p>
+        <p class="header">Título Principal</p>
+        <p class="subtitle">Este é o subtítulo que precisa de estilo específico.</p>
+        <p>Paragrafo inserido</p>
+        <p>Paragrafo para fechar 4 paragrafos</p>
+
       </div>
 
       <div class="conteudo">
         <h1>Titulo do paragrafo</h1>
         <p>Este é o parágrafo que herdará estilos aplicados em div pai.</p>
+        <p>Adicionei esse para conseguir realizar o desafio</p>
+        <p>Adicionei esse para conseguir realizar o desafio</p>
+        <p>Adicionei esse para conseguir realizar o desafio</p>
+        
       </div>
+
     </div>
   </body>
 </html>
